# linear-algebra

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
src/linear_algebra/: vector.py
tests/unit/: assertions.py  test_main.py  test_vector.py
